--- a/kanmem.html
+++ b/kanmem.html
@@ -10,6 +10,6 @@
 		</style>
 	</head>
 	<body>
-		<img src="C:\Users\itsma\OneDrive\Pictures\clg\gamegang.jpeg" widht=200px height=300px>
+		<img src="gamegang.jpeg" widht=200px height=300px>
 	</body>
 </html>
