--- a/mamem.html
+++ b/mamem.html
@@ -10,6 +10,6 @@
 		</style>
 	</head>
 	<body>
-		<img src="C:\Users\itsma\OneDrive\Pictures\clg\pongalgang.jpeg" widht=200px height=300px>
+		<img src="pongalgang.jpeg" widht=200px height=300px>
 	</body>
 </html>
