--- a/senmem.html
+++ b/senmem.html
@@ -10,6 +10,6 @@
 		</style>
 	</head>
 	<body>
-		<img src="C:\Users\itsma\OneDrive\Pictures\clg\teagang.jpeg" widht=200px height=300px>
+		<img src="teagang.jpeg" widht=200px height=300px>
 	</body>
 </html>
