--- a/dhanamem.html
+++ b/dhanamem.html
@@ -10,6 +10,6 @@
 		</style>
 	</head>
 	<body>
-		<img src="C:\Users\itsma\OneDrive\Pictures\clg\gunagang.jpeg" widht=200px height=300px>
+		<img src="gunagang.jpeg" widht=200px height=300px>
 	</body>
 </html>
