--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 		</span>
 		<h2 id="sub">DEPARTMENT OF COMPUTER SCIENCE</h2>
 		<h2 id="into">HAPPY ENDING</H2>
-		<a href="dhanamem.html"><img src="dhana.jpg" width=200px height=250px></a>
+		<a href="dhanamem.html"><img src="dhana.jpeg" width=200px height=250px></a>
 		<h2 style="text-align:center">DHANA VEL<BR>20211311506207<h2>
-		<a href="senmem.html"><img src="sen.jpg" width=200px height=250px></a>
+		<a href="senmem.html"><img src="sen.jpeg" width=200px height=250px></a>
 		<h2 style="text-align:center">SENTHIL MANIKNDAN<BR>20211311506236<h2>
-		<a href="mamem.html"><img src="me.jpg" width=250px height=250px></a>
+		<a href="mamem.html"><img src="me.jpeg" width=250px height=250px></a>
 		<h2 style="text-align:center">MATHAN<BR>20211311506220<h2>
-		<a href="kanmem.html"><img src="kan.jpg" width=250px height=250px></a>
+		<a href="kanmem.html"><img src="kan.jpeg" width=250px height=250px></a>
 		<h2 style="text-align:center">PECHI KANNAN<BR>20211311506220<h2>
 		
 	</body>	
